fix: layout shift on sidebar

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -6,3 +6,15 @@
   --w-sidebar-mobile: 300px;
   --w-sidebar-desktop: 257px;
 }
+
+@layer base {
+  .sidebar-scrollbar {
+    transition: all 0.3s ease-in-out;
+    &::-webkit-scrollbar {
+      @apply w-[10px] bg-transparent;
+    }
+    &::-webkit-scrollbar-thumb {
+      @apply rounded bg-gray-300;
+    }
+  }
+}
